--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,4 +6,8 @@
     "quickfix.biome": "explicit",
     "source.organizeImports.biome": "explicit"
   },
+  "explorer.fileNesting.enabled": true,
+  "explorer.fileNesting.patterns": {
+    "package.json": "*"
+  }
 }
