--- a/biome.json
+++ b/biome.json
@@ -27,8 +27,8 @@
 	},
 	"javascript": {
 		"formatter": {
-			"quoteStyle": "single",
-			"lineWidth": 120
+			"quoteStyle": "double",
+			"lineWidth": 80
 		}
 	}
 }
