--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,6 +26,7 @@
     /* Path Aliases */
     "baseUrl": ".",
     "paths": {
+      "@/public/*": ["./public/*"],
       "@/*": ["./src/*"]
     }
   },
