--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.30.10",
+    "embla-carousel-autoplay": "^8.2.1",
+    "embla-carousel-react": "^8.2.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.399.0",
     "next": "^14.2.1",
