--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "embla-carousel-react": "^8.2.1",
     "geist": "^1.3.0",
     "lucide-react": "^0.399.0",
+    "markdown-to-jsx": "^7.5.0",
     "next": "^14.2.1",
     "postgres": "^3.4.4",
     "react": "^18.3.0",
@@ -43,6 +44,7 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.8.3",
+    "@tailwindcss/typography": "^0.5.15",
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
