--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,11 @@
   "[javascript][typescript]": {
     "editor.defaultFormatter": "biomejs.biome"
   },
+  "editor.formatOnSave": true,
   "editor.codeActionsOnSave": {
     "quickfix.biome": "explicit",
-    "source.organizeImports.biome": "explicit"
+    "source.organizeImports.biome": "explicit",
+    "source.fixAll.biome": "always"
   },
   "explorer.fileNesting.enabled": true,
   "explorer.fileNesting.patterns": {
