--- a/biome.json
+++ b/biome.json
@@ -1,5 +1,5 @@
 {
-	"$schema": "https://biomejs.dev/schemas/1.8.3/schema.json",
+	"$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
 	"organizeImports": {
 		"enabled": true
 	},
@@ -7,6 +7,12 @@
 		"enabled": true,
 		"rules": {
 			"recommended": true,
+			"a11y": {
+				"useSemanticElements": "off"
+			},
+			"correctness": {
+				"noUnusedImports": "warn"
+			},
 			"suspicious": {
 				"noExplicitAny": "error",
 				"noRedeclare": "off",
@@ -14,6 +20,9 @@
 			},
 			"complexity": {
 				"useLiteralKeys": "off"
+			},
+			"nursery": {
+				"useSortedClasses": "warn"
 			},
 			"style": {
 				"noNonNullAssertion": "off",
@@ -30,6 +39,7 @@
 		"formatter": {
 			"quoteStyle": "double",
 			"lineWidth": 80
+			
 		}
 	}
 }
