--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-and-tasty",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "private": true,
   "type": "module",
   "scripts": {
@@ -10,48 +10,53 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
-    "lint": "next lint",
+    "lint": "npx @biomejs/biome check --write --unsafe ./src ",
     "start": "next start"
   },
   "dependencies": {
-    "@radix-ui/react-accordion": "^1.2.0",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-tooltip": "^1.1.2",
-    "@t3-oss/env-nextjs": "^0.10.1",
-    "@tanstack/react-query": "^5.39.0",
-    "@trpc/client": "next",
-    "@trpc/react-query": "next",
-    "@trpc/server": "next",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.1",
-    "drizzle-orm": "^0.30.10",
-    "embla-carousel-autoplay": "^8.2.1",
-    "embla-carousel-react": "^8.2.1",
-    "geist": "^1.3.0",
-    "lucide-react": "^0.399.0",
-    "markdown-to-jsx": "^7.5.0",
-    "next": "^14.2.1",
-    "postgres": "^3.4.4",
-    "react": "^18.3.0",
-    "react-dom": "^18.3.0",
-    "server-only": "^0.0.1",
-    "superjson": "^2.2.1",
-    "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.23.3"
+    "@radix-ui/react-accordion": "1.2.1",
+    "@radix-ui/react-dialog": "1.1.2",
+    "@radix-ui/react-dropdown-menu": "2.1.2",
+    "@radix-ui/react-label": "2.1.0",
+    "@radix-ui/react-popover": "1.1.2",
+    "@radix-ui/react-select": "2.1.2",
+    "@radix-ui/react-separator": "1.1.0",
+    "@radix-ui/react-slot": "1.1.0",
+    "@radix-ui/react-tooltip": "1.1.3",
+    "@t3-oss/env-nextjs": "0.11.1",
+    "@tanstack/react-query": "5.59.15",
+    "@trpc/client": "11.0.0-rc.589",
+    "@trpc/react-query": "11.0.0-rc.589",
+    "@trpc/server": "11.0.0-rc.589",
+    "class-variance-authority": "0.7.0",
+    "clsx": "2.1.1",
+    "cmdk": "1.0.0",
+    "drizzle-orm": "0.35.2",
+    "embla-carousel-autoplay": "8.3.0",
+    "embla-carousel-react": "8.3.0",
+    "geist": "1.3.1",
+    "lucide-react": "0.453.0",
+    "markdown-to-jsx": "7.5.0",
+    "next": "14.2.15",
+    "postgres": "3.4.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "server-only": "0.0.1",
+    "superjson": "2.2.1",
+    "tailwind-merge": "2.5.4",
+    "tailwindcss-animate": "1.0.7",
+    "zod": "3.23.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "1.8.3",
-    "@tailwindcss/typography": "^0.5.15",
-    "@types/node": "^20.11.20",
-    "@types/react": "^18.2.57",
-    "@types/react-dom": "^18.2.19",
-    "drizzle-kit": "^0.21.4",
-    "postcss": "^8.4.34",
-    "tailwindcss": "^3.4.3",
-    "typescript": "^5.4.2"
+    "@biomejs/biome": "1.9.4",
+    "@tailwindcss/typography": "0.5.15",
+    "@types/node": "22.7.7",
+    "@types/react": "18.3.11",
+    "@types/react-dom": "18.3.1",
+    "drizzle-kit": "0.26.2",
+    "postcss": "8.4.47",
+    "tailwindcss": "3.4.14",
+    "typescript": "5.6.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
