--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
     "db:studio": "drizzle-kit studio",
     "dev": "next dev",
     "lint": "npx @biomejs/biome check --write --unsafe ./src ",
-    "start": "next start"
+    "start": "next start",
+    "tsc": "tsc"
   },
   "dependencies": {
     "@radix-ui/react-accordion": "1.2.1",
+    "@radix-ui/react-collapsible": "1.1.1",
     "@radix-ui/react-dialog": "1.1.2",
     "@radix-ui/react-dropdown-menu": "2.1.2",
     "@radix-ui/react-label": "2.1.0",
@@ -38,6 +40,7 @@
     "lucide-react": "0.453.0",
     "markdown-to-jsx": "7.5.0",
     "next": "14.2.15",
+    "next-themes": "0.3.0",
     "postgres": "3.4.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
