--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@codemirror/lang-markdown": "6.3.1",
+    "@hookform/resolvers": "3.9.0",
     "@radix-ui/react-accordion": "1.2.1",
     "@radix-ui/react-collapsible": "1.1.1",
     "@radix-ui/react-dialog": "1.1.2",
@@ -24,12 +26,14 @@
     "@radix-ui/react-select": "2.1.2",
     "@radix-ui/react-separator": "1.1.0",
     "@radix-ui/react-slot": "1.1.0",
-    "@radix-ui/react-tooltip": "1.1.3",
+    "@radix-ui/react-tooltip": "1.1.4",
     "@t3-oss/env-nextjs": "0.11.1",
     "@tanstack/react-query": "5.59.15",
-    "@trpc/client": "11.0.0-rc.589",
-    "@trpc/react-query": "11.0.0-rc.589",
-    "@trpc/server": "11.0.0-rc.589",
+    "@trpc/client": "11.0.0-rc.638",
+    "@trpc/react-query": "11.0.0-rc.638",
+    "@trpc/server": "11.0.0-rc.638",
+    "@uiw/react-codemirror": "4.23.6",
+    "@uploadthing/react": "7.1.1",
     "class-variance-authority": "0.7.0",
     "clsx": "2.1.1",
     "cmdk": "1.0.0",
@@ -39,15 +43,18 @@
     "geist": "1.3.1",
     "lucide-react": "0.453.0",
     "markdown-to-jsx": "7.5.0",
-    "next": "14.2.15",
+    "next": "14.2.18",
     "next-themes": "0.3.0",
-    "postgres": "3.4.4",
+    "postgres": "3.4.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-hook-form": "7.53.2",
     "server-only": "0.0.1",
+    "sonner": "1.7.0",
     "superjson": "2.2.1",
     "tailwind-merge": "2.5.4",
     "tailwindcss-animate": "1.0.7",
+    "uploadthing": "^7.3.0",
     "zod": "3.23.8"
   },
   "devDependencies": {
