--- a/package.json
+++ b/package.json
@@ -10,40 +10,40 @@
     "db:push": "drizzle-kit push",
     "db:studio": "drizzle-kit studio",
     "dev": "next dev --turbopack",
-    "lint": "npx @biomejs/biome check --write --unsafe ./src ",
+    "lint": "biome check --write --unsafe ./src ",
     "start": "next start",
     "tsc": "tsc"
   },
   "dependencies": {
-    "@codemirror/lang-markdown": "6.3.1",
-    "@hookform/resolvers": "3.9.1",
-    "@radix-ui/react-accordion": "1.2.2",
-    "@radix-ui/react-collapsible": "1.1.2",
-    "@radix-ui/react-dialog": "1.1.4",
-    "@radix-ui/react-dropdown-menu": "2.1.4",
-    "@radix-ui/react-label": "2.1.1",
-    "@radix-ui/react-popover": "1.1.4",
-    "@radix-ui/react-select": "2.1.4",
-    "@radix-ui/react-separator": "1.1.1",
-    "@radix-ui/react-slot": "1.1.1",
-    "@radix-ui/react-tooltip": "1.1.6",
-    "@t3-oss/env-nextjs": "0.11.1",
-    "@tanstack/react-query": "5.62.15",
-    "@trpc/client": "11.0.0-rc.682",
-    "@trpc/react-query": "11.0.0-rc.682",
-    "@trpc/server": "11.0.0-rc.682",
-    "@uiw/react-codemirror": "4.23.7",
+    "@codemirror/lang-markdown": "6.3.2",
+    "@hookform/resolvers": "3.10.0",
+    "@radix-ui/react-accordion": "1.2.3",
+    "@radix-ui/react-collapsible": "1.1.3",
+    "@radix-ui/react-dialog": "1.1.6",
+    "@radix-ui/react-dropdown-menu": "2.1.6",
+    "@radix-ui/react-label": "2.1.2",
+    "@radix-ui/react-popover": "1.1.6",
+    "@radix-ui/react-select": "2.1.6",
+    "@radix-ui/react-separator": "1.1.2",
+    "@radix-ui/react-slot": "1.1.2",
+    "@radix-ui/react-tooltip": "1.1.8",
+    "@t3-oss/env-nextjs": "0.12.0",
+    "@tanstack/react-query": "5.66.0",
+    "@trpc/client": "11.0.0-rc.748",
+    "@trpc/react-query": "11.0.0-rc.748",
+    "@trpc/server": "11.0.0-rc.748",
+    "@uiw/react-codemirror": "4.23.8",
     "@uploadthing/react": "7.1.5",
-    "babel-plugin-react-compiler": "19.0.0-beta-55955c9-20241229",
+    "babel-plugin-react-compiler": "19.0.0-beta-714736e-20250131",
     "class-variance-authority": "0.7.1",
     "clsx": "2.1.1",
-    "drizzle-orm": "0.38.3",
-    "embla-carousel-autoplay": "8.5.1",
-    "embla-carousel-react": "8.5.1",
+    "drizzle-orm": "0.39.2",
+    "embla-carousel-autoplay": "8.5.2",
+    "embla-carousel-react": "8.5.2",
     "geist": "1.3.1",
-    "lucide-react": "0.469.0",
-    "markdown-to-jsx": "7.7.2",
-    "next": "15.1.1-canary.23",
+    "lucide-react": "0.475.0",
+    "markdown-to-jsx": "7.7.3",
+    "next": "15.1.6",
     "next-themes": "0.4.4",
     "postgres": "3.4.5",
     "react": "19.0.0",
@@ -51,7 +51,7 @@
     "react-hook-form": "7.54.2",
     "server-only": "0.0.1",
     "fluid-tailwind": "1.0.4",
-    "sonner": "1.7.1",
+    "sonner": "1.7.4",
     "superjson": "2.2.2",
     "tailwind-merge": "2.6.0",
     "tailwindcss-animate": "1.0.7",
@@ -60,14 +60,14 @@
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/typography": "0.5.15",
-    "@types/node": "22.10.5",
-    "@types/react": "19.0.2",
-    "@types/react-dom": "19.0.2",
-    "drizzle-kit": "0.30.1",
-    "postcss": "8.4.49",
+    "@tailwindcss/typography": "0.5.16",
+    "@types/node": "22.10.10",
+    "@types/react": "19.0.8",
+    "@types/react-dom": "19.0.3",
+    "drizzle-kit": "0.30.3",
+    "postcss": "8.5.1",
     "tailwindcss": "3.4.17",
-    "typescript": "5.7.2"
+    "typescript": "5.7.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
