--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,8 @@
   },
   "files.associations": {
     "*.css": "tailwindcss"
-  }
+  },
+  "typescript.preferences.autoImportFileExcludePatterns": [
+    "@radix-ui/*"
+  ]
 }
