--- a/package.json
+++ b/package.json
@@ -15,59 +15,63 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@codemirror/lang-markdown": "6.3.2",
-    "@hookform/resolvers": "4.1.3",
-    "@radix-ui/react-accordion": "1.2.3",
-    "@radix-ui/react-collapsible": "1.1.3",
+    "@auth/drizzle-adapter": "^1.8.0",
+    "@codemirror/lang-markdown": "^6.3.2",
+    "@hookform/resolvers": "^4.1.3",
+    "@radix-ui/react-accordion": "^1.2.4",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-collapsible": "^1.1.3",
     "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "2.1.6",
-    "@radix-ui/react-label": "2.1.2",
-    "@radix-ui/react-popover": "1.1.6",
-    "@radix-ui/react-select": "2.1.6",
-    "@radix-ui/react-separator": "1.1.2",
-    "@radix-ui/react-slot": "1.1.2",
-    "@radix-ui/react-tooltip": "1.1.8",
-    "@t3-oss/env-nextjs": "0.12.0",
-    "@tanstack/react-query": "5.69.0",
-    "@trpc/client": "11.0.0-rc.833",
-    "@trpc/react-query": "11.0.0-rc.833",
-    "@trpc/server": "11.0.0-rc.833",
-    "@uiw/react-codemirror": "4.23.10",
-    "@uploadthing/react": "7.3.0",
-    "babel-plugin-react-compiler": "19.0.0-beta-3229e95-20250315",
-    "class-variance-authority": "0.7.1",
-    "clsx": "2.1.1",
-    "drizzle-orm": "0.40.1",
-    "embla-carousel-autoplay": "8.5.2",
-    "embla-carousel-react": "8.5.2",
-    "geist": "1.3.1",
-    "lucide-react": "0.483.0",
-    "markdown-to-jsx": "7.7.4",
-    "next": "15.2.3",
-    "next-themes": "0.4.6",
-    "postgres": "3.4.5",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
-    "react-hook-form": "7.54.2",
-    "server-only": "0.0.1",
-    "sonner": "2.0.1",
-    "superjson": "2.2.2",
-    "uploadthing": "7.5.2",
-    "zod": "3.24.2"
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@t3-oss/env-nextjs": "^0.12.0",
+    "@tanstack/react-query": "^5.70.0",
+    "@trpc/client": "^11.0.1",
+    "@trpc/react-query": "^11.0.1",
+    "@trpc/server": "^11.0.1",
+    "@uiw/react-codemirror": "^4.23.10",
+    "@uploadthing/react": "^7.3.0",
+    "babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
+    "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "drizzle-orm": "^0.41.0",
+    "embla-carousel-autoplay": "^8.6.0",
+    "embla-carousel-react": "^8.6.0",
+    "geist": "^1.3.1",
+    "lucide-react": "^0.487.0",
+    "markdown-to-jsx": "^7.7.4",
+    "next": "^15.2.4",
+    "next-auth": "^4.24.11",
+    "next-themes": "^0.4.6",
+    "postgres": "^3.4.5",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.55.0",
+    "server-only": "^0.0.1",
+    "sonner": "^2.0.3",
+    "superjson": "^2.2.2",
+    "uploadthing": "^7.6.0",
+    "zod": "^3.24.2"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
-    "@tailwindcss/typography": "0.5.16",
-    "@types/node": "22.13.10",
-    "@types/react": "19.0.11",
-    "@types/react-dom": "19.0.4",
-    "drizzle-kit": "0.30.5",
-    "fluid-tailwind": "1.0.4",
-    "postcss": "8.5.3",
-    "tailwind-merge": "2.6.0",
-    "tailwindcss-animate": "1.0.7",
-    "tailwindcss": "3.4.17",
-    "typescript": "5.8.2"
+    "@tailwindcss/typography": "^0.5.16",
+    "@types/node": "^22.14.0",
+    "@types/react": "^19.1.0",
+    "@types/react-dom": "^19.1.1",
+    "drizzle-kit": "^0.30.6",
+    "fluid-tailwind": "^1.0.4",
+    "postcss": "^8.5.3",
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.8.3"
   },
   "ct3aMetadata": {
     "initVersion": "7.34.0"
