--- a/package.json
+++ b/package.json
@@ -17,36 +17,36 @@
   "dependencies": {
     "@auth/drizzle-adapter": "^1.8.0",
     "@codemirror/lang-markdown": "^6.3.2",
-    "@hookform/resolvers": "^4.1.3",
+    "@hookform/resolvers": "^5.0.1",
     "@radix-ui/react-accordion": "^1.2.4",
-    "@radix-ui/react-avatar": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.3",
-    "@radix-ui/react-dialog": "1.1.6",
-    "@radix-ui/react-dropdown-menu": "^2.1.6",
-    "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-popover": "^1.1.6",
-    "@radix-ui/react-select": "^2.1.6",
-    "@radix-ui/react-separator": "^1.1.2",
-    "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.8",
+    "@radix-ui/react-avatar": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.4",
+    "@radix-ui/react-dialog": "1.1.7",
+    "@radix-ui/react-dropdown-menu": "^2.1.7",
+    "@radix-ui/react-label": "^2.1.3",
+    "@radix-ui/react-popover": "^1.1.7",
+    "@radix-ui/react-select": "^2.1.7",
+    "@radix-ui/react-separator": "^1.1.3",
+    "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tooltip": "^1.2.0",
     "@t3-oss/env-nextjs": "^0.12.0",
-    "@tanstack/react-query": "^5.70.0",
-    "@trpc/client": "^11.0.1",
-    "@trpc/react-query": "^11.0.1",
-    "@trpc/server": "^11.0.1",
+    "@tanstack/react-query": "^5.74.3",
+    "@trpc/client": "^11.1.0",
+    "@trpc/react-query": "^11.1.0",
+    "@trpc/server": "^11.1.0",
     "@uiw/react-codemirror": "^4.23.10",
     "@uploadthing/react": "^7.3.0",
-    "babel-plugin-react-compiler": "^19.0.0-beta-aeaed83-20250323",
+    "babel-plugin-react-compiler": "19.0.0-beta-ebf51a3-20250411",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "drizzle-orm": "^0.41.0",
+    "drizzle-orm": "^0.42.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
     "geist": "^1.3.1",
-    "lucide-react": "^0.487.0",
+    "lucide-react": "^0.488.0",
     "markdown-to-jsx": "^7.7.4",
-    "next": "^15.2.4",
+    "next": "^15.3.0",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.5",
@@ -62,10 +62,10 @@
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.14.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
-    "drizzle-kit": "^0.30.6",
+    "@types/node": "^22.14.1",
+    "@types/react": "^19.1.22",
+    "@types/react-dom": "^19.1.2",
+    "drizzle-kit": "^0.31.0",
     "fluid-tailwind": "^1.0.4",
     "postcss": "^8.5.3",
     "tailwind-merge": "^2.6.0",
