--- a/package.json
+++ b/package.json
@@ -15,60 +15,62 @@
     "tsc": "tsc"
   },
   "dependencies": {
-    "@auth/drizzle-adapter": "^1.9.0",
+    "@auth/drizzle-adapter": "^1.9.1",
     "@codemirror/lang-markdown": "^6.3.2",
     "@hookform/resolvers": "^5.0.1",
-    "@radix-ui/react-accordion": "^1.2.8",
-    "@radix-ui/react-avatar": "^1.1.7",
-    "@radix-ui/react-collapsible": "^1.1.8",
-    "@radix-ui/react-dialog": "1.1.11",
-    "@radix-ui/react-dropdown-menu": "^2.1.12",
-    "@radix-ui/react-label": "^2.1.4",
-    "@radix-ui/react-popover": "^1.1.11",
-    "@radix-ui/react-select": "^2.2.2",
-    "@radix-ui/react-separator": "^1.1.4",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@radix-ui/react-tooltip": "^1.2.4",
-    "@t3-oss/env-nextjs": "^0.13.0",
-    "@tanstack/react-query": "^5.74.4",
-    "@trpc/client": "^11.1.1",
-    "@trpc/react-query": "^11.1.1",
-    "@trpc/server": "^11.1.1",
-    "@uiw/react-codemirror": "^4.23.10",
-    "@uploadthing/react": "^7.3.0",
-    "babel-plugin-react-compiler": "19.1.0-rc.1",
+    "@radix-ui/react-accordion": "^1.2.11",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@t3-oss/env-nextjs": "^0.13.6",
+    "@tanstack/react-query": "^5.77.2",
+    "@trpc/client": "^11.1.3",
+    "@trpc/react-query": "^11.1.3",
+    "@trpc/server": "^11.1.3",
+    "@uiw/react-codemirror": "^4.23.12",
+    "@uploadthing/react": "^7.3.1",
+    "babel-plugin-react-compiler": "19.1.0-rc.2",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.43.1",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
-    "geist": "^1.3.1",
-    "lucide-react": "^0.503.0",
+    "geist": "^1.4.2",
+    "lucide-react": "^0.511.0",
     "markdown-to-jsx": "^7.7.6",
-    "next": "^15.3.1",
+    "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.6",
-    "postgres": "^3.4.5",
+    "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.55.0",
+    "react-hook-form": "^7.56.4",
     "server-only": "^0.0.1",
     "sonner": "^2.0.3",
     "superjson": "^2.2.2",
-    "uploadthing": "^7.6.0",
-    "zod": "^3.24.3"
+    "uploadthing": "^7.7.2",
+    "zod": "^3.25.32"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
     "@tailwindcss/typography": "^0.5.16",
-    "@types/node": "^22.15.2",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "drizzle-kit": "^0.31.0",
+    "@types/node": "^22.15.23",
+    "@types/react": "^19.1.6",
+    "@types/react-dom": "^19.1.5",
+    "drizzle-kit": "^0.31.1",
     "fluid-tailwind": "^1.0.4",
     "postcss": "^8.5.3",
-    "tailwind-merge": "^2.6.0",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
     "tailwindcss": "^3.4.17",
     "typescript": "^5.8.3"
