--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@radix-ui/react-dialog": "1.1.14",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-navigation-menu": "^1.2.13",
     "@radix-ui/react-popover": "^1.1.14",
     "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-separator": "^1.1.7",
@@ -32,10 +33,10 @@
     "@radix-ui/react-tabs": "^1.1.12",
     "@radix-ui/react-tooltip": "^1.2.7",
     "@t3-oss/env-nextjs": "^0.13.6",
-    "@tanstack/react-query": "^5.79",
-    "@trpc/client": "^11.1.4",
-    "@trpc/react-query": "^11.1.4",
-    "@trpc/server": "^11.1.4",
+    "@tanstack/react-query": "^5.80.1",
+    "@trpc/client": "^11.2.0",
+    "@trpc/react-query": "^11.2.0",
+    "@trpc/server": "^11.2.0",
     "@uiw/react-codemirror": "^4.23.12",
     "@uploadthing/react": "^7.3.1",
     "babel-plugin-react-compiler": "19.1.0-rc.2",
@@ -54,12 +55,12 @@
     "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-hook-form": "^7.56.4",
+    "react-hook-form": "^7.57.0",
     "server-only": "^0.0.1",
-    "sonner": "^2.0.4",
+    "sonner": "^2.0.5",
     "superjson": "^2.2.2",
     "uploadthing": "^7.7.2",
-    "zod": "^3.25.45"
+    "zod": "^3.25.49"
   },
   "devDependencies": {
     "@biomejs/biome": "1.9.4",
